<resources>
    <string name="app_name" translatable="false">MyMo</string>
    <string name="list_date">Remember me on the: </string>
    <string name="list_time">at: </string>
    <string name="title">Title </string>
    <string name="date">Date </string>
    <string name="hour">Hour </string>
    <string name="priority">Priority </string>
    <string name="classTask">Class </string>
    <string name="notes">Notes </string>
    <string name="no_text_here">Still no text here </string>
    <string name="cancel">Cancel </string>
    <string name="save">Save </string>
    <string name="title_dialog_add">New task</string>
    <string name="control_on_title">At least add title</string>
    <string name="task_added">Task added</string>
    <string name="task_not_added">Attention: task not added</string>
    <string name="task_deleted">Task deleted</string>
    <string name="task_completed">Task completed</string>
    <string name="happens_now">Happens now!</string>
    <string name="privatee">Private</string>
    <string name="school">School</string>
    <string name="work">Work</string>
    <string name="family">Family</string>
    <string name="pie">Pie</string>
    <string name="hist">Hist</string>
    <string name="box">Box</string>
    <string name="line">Line</string>
    <string name="todo">To do</string>
    <string name="stats">Usage stats</string>
    <string name="pending">Pending</string>
    <string name="ongoing">On Going</string>
    <string name="postpone">Postpone</string>
    <string name="settings">Settings</string>
    <string name="deleted_task">Deleted</string>
    <string name="completed_task">Completed</string>
    <string name="task_become_ongoing">Task become on going</string>
    <string name="pieDescription">The status of your task:\nPending, Ongoing, Completed</string>
    <string name="pie2Description">What did you leave?\nWhat have you completed?</string>
    <string name="lineDescription">The number of completed task per day, this month</string>
    <string name="histDescription">The number of tasks belonging\nto the different classes</string>
    <string name="create">Create</string>
    <string name="modify">Modify</string>
    <string name="all">All</string>
    <string name="no_priority">Without priority</string>
    <string name="priority_1">Priority 1</string>
    <string name="priority_2">Priority 2</string>
    <string name="priority_3">Priority 3</string>
    <string name="channel_0_description">Channel for notification without priority (0)</string>
    <string name="channel_1_description">Channel for notification with priority LOW (1)</string>
    <string name="channel_2_description">Channel for notification with priority MEDIUM (2)</string>
    <string name="channel_3_description">Channel for notification with priority HIGH (3)</string>
    <string name="pie_hist">Pie and hist</string>
    <string name="pie_line">Pie and line</string>



    <string-array name="priority">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="classify">
        <item>Private</item>
        <item>School</item>
        <item>Work</item>
        <item>Family</item>
    </string-array>


</resources>
