<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/title"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/ETtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:inputType="textCapSentences"
            android:maxLength="40"/>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/date"
            android:id="@+id/tvDate"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/ETDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:focusableInTouchMode="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/hour"
            android:layout_marginLeft="20dp"
            android:id="@+id/tvTime"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/ETTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:focusableInTouchMode="false"/>

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:text="@string/priority"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/black"/>

    <Spinner
        android:id="@+id/SPNprior"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:entries="@array/priority"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:text="@string/classTask"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/black"/>

        <Spinner
            android:id="@+id/SPNclass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:inputType="text"
            android:entries="@array/classify"/>
    </LinearLayout>


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ETNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/no_text_here"
            android:textColor="@android:color/darker_gray"
            android:inputType="textMultiLine"
            android:nestedScrollingEnabled="true"
            android:background="@null" />

    </ScrollView>

</LinearLayout>
</ScrollView>